--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./css/miestilo.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../node_modules/glyphilectron/public/lib/css/bootstrap.min.css">
-    <title>Katana</title>
+    <title>BseRoot</title>
 
   </head>
   <body>
