nodulo repuestos completo

--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,15 @@
   <body>
     <form>
     <div class="container">
-        <h3 id="title">Log in</h3>
+      <img src="./src/avatar.png" alt="" id="imgAvatar">
+        <!--<h3 id="title">Log in</h3>-->
         <input type="email" class="form-control" id="user" placeholder="Usuario">
         <input type="password" class="form-control" id="password" placeholder="Contraseña">
         <button type="button" class="btn btn-success btn-md" id="btnlogin">Ingresar</button>
   </form>
+    <script>
+          window.jQuery = window.$ = require('jquery');
+    </script>
     <script type="text/javascript" src="./js/login.js"></script>
     <script>require ('./login.js')</script>
   </body>
