mejoras modulo clientes

--- a/app/main.html
+++ b/app/main.html
@@ -92,8 +92,8 @@
             <div class="col-md-10" id="section">
                 <img  v-show = "gifOctopus" src="src/octo-loader.gif" alt="" id="gifOctopus">
                 <img  v-show = "gifBull" src="src/bullPysique.gif" id="gifBull">
-                <h5 v-show = "gifOctopus">Cargando...</h5>
-                <h5 v-show = "gifBull">Cargando...</h5>
+                <h5 v-show = "gifOctopus" id="loading">Cargando...</h5>
+                <h5 v-show = "gifBull" id="loading">Cargando...</h5>
                 <div v-show = "viewSpare">
                     <spare-component></spare-component>
                 </div>
