comienxo de refactor

--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/miestilo.css">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../node_modules/glyphilectron/public/lib/css/bootstrap.min.css">
-    <title>BseRoot</title>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./src/css/miestilo.css">
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../node_modules/glyphilectron/public/lib/css/bootstrap.min.css">
+  <title>BseRoot</title>
 
-  </head>
-  <body>
-    <form>
-    <div class="container">
-      <img src="./src/avatar.png" alt="" id="imgAvatar">
-        <!--<h3 id="title">Log in</h3>-->
-        <input type="email" class="form-control" id="user" placeholder="Usuario">
-        <input type="password" class="form-control" id="password" placeholder="Contraseña">
-        <button type="button" class="btn btn-success btn-md" id="btnlogin">Ingresar</button>
-  </form>
-    <script>
-          window.jQuery = window.$ = require('jquery');
-    </script>
-    <script type="text/javascript" src="./js/login.js"></script>
-    <script>require ('./login.js')</script>
-  </body>
+</head>
+<body>
+<form>
+  <div class="container">
+    <img src="./src/assets/avatar.png" alt="" id="imgAvatar">
+    <!--<h3 id="title">Log in</h3>-->
+    <input type="email" class="form-control" id="user" placeholder="Usuario">
+    <input type="password" class="form-control" id="password" placeholder="Contraseña">
+    <button type="button" class="btn btn-success btn-md" id="btnlogin">Ingresar</button>
+</form>
+<script>
+  window.jQuery = window.$ = require('jquery');
+</script>
+<script type="text/javascript" src="./src/js/login.js"></script>
+<script>require ('./login.js')</script>
+</body>
 </html>
